<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5000"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.Weather.weatherapp.Views.MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:paddingBottom="@dimen/upper_layout_bottom_padding"
        android:paddingLeft="@dimen/upper_layout_left_padding"
        android:paddingRight="@dimen/upper_layout_right_padding"
        android:paddingTop="@dimen/upper_layout_top_padding" >

        <TextView
            android:id="@+id/location_name"
            style="@style/text_view_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:textSize="@dimen/location_font_size" />

        <LinearLayout
            android:id="@+id/layout_partition"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/location_name"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/date_field"
            style="@style/text_view_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/layout_partition"
            android:textSize="@dimen/other_data_font_size" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/weather_status_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="left" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingRight="@dimen/upper_layout_right_padding" >

                <TextView
                    android:id="@+id/current_temperature"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/current_temp_font_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temp"
                        android:textSize="@dimen/other_data_font_size" />

                    <TextView
                        android:id="@+id/min_temperature"
                        style="@style/text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/other_data_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temp"
                        android:textSize="@dimen/other_data_font_size" />

                    <TextView
                        android:id="@+id/max_temperature"
                        style="@style/text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/other_data_font_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/weather_type"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/other_data_font_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_"
                    android:textSize="@dimen/other_data_font_size" />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/other_data_font_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/weather_decription"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/other_data_font_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated"
                    android:textSize="@dimen/last_update_font_size" />

                <TextView
                    android:id="@+id/last_updated"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/last_update_font_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.50" >

        <LinearLayout
            android:id="@+id/horizontal_layout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
</FrameLayout>